# IN424

./: README.md  install_dependencies.sh  install_noetic.sh
in424_desc/: CMakeLists.txt  package.xml
in424_desc/xacro/: robot.gazebo  robot.xacro
in424_msgs/: CMakeLists.txt  package.xml
in424_msgs/srv/: DistToFlag.srv
in424_nav/: CMakeLists.txt  package.xml
in424_nav/launch/: agent.launch
in424_nav/scripts/: my_agent.py
in424_plugins/: CMakeLists.txt  package.xml
in424_plugins/include/in424_plugins/: dist_to_flag.hpp
in424_plugins/src/: dist_to_flag.cpp
in424_simu/: CMakeLists.txt  package.xml
in424_simu/launch/: simu.launch  start_world_launch.py
in424_simu/models/black_flag/: model.config
in424_simu/models/blue_flag/: model.config
in424_simu/models/cube/: model.config  model.sdf
in424_simu/models/green_flag/: model.config
in424_simu/models/orange_flag/: model.config
in424_simu/models/purple_flag/: model.config
in424_simu/models/red_flag/: model.config
in424_simu/models/walls/: model.config
in424_simu/models/white_flag/: model.config
in424_simu/models/yellow_flag/: model.config
in424_simu/worlds/: env_1.world  env_2.world  env_test_1.world  env_test_2.world
