<?xml version="1.0"?>
<package format="2">
  <name>in424_desc</name>
  <version>1.0.0</version>
  <description>This package describes the simulated robot</description>
  <maintainer email="johvany.gustave@ipsa.fr">Johvany Gustave</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>