<?xml version="1.0"?>
<package format="2">
  <name>in424_msgs</name>
  <version>1.0.0</version>
  <description>This package generates a custom service used by the plugin pkg</description>
  <maintainer email="johvany.gustave@ipsa.fr">Johvany Gustave</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
