<?xml version="1.0"?>
<package format="2">
  <name>in424_simu</name>
  <version>1.0.0</version>
  <description>This package contains the required files to run the simulation</description>
  <maintainer email="johvany.gustave@ipsa.fr">Johvany Gustave</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models" />
  </export>
</package>
